# logic_voxels

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
assets/: array_test.aseprite  character.glb  custom_material.wgsl  test_texture.ase
scripts/: git-step.sh
src/: block.rs  chunk.rs  chunk_loading.rs  chunk_mesh_generation.rs  chunk_updating.rs  client_utils.rs  direction.rs  lib.rs  main.rs  material.rs  networking.rs  physics.rs  prelude.rs  server_utils.rs
src/chunks/: block.rs  chunk.rs  chunk_loading.rs  chunk_mesh_generation.rs  chunk_updating.rs  mod.rs
src/chunks/client/: chunk_mesh_generation.rs  click_detection.rs  client_chunks.rs  material.rs  mod.rs
src/chunks/server/: mod.rs  server_chunks.rs
src/networking/: client_utils.rs  message.rs  mod.rs  server_utils.rs
