[package]
name = "logic_voxels"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
#bevy = {version = "0.8", features = ["dynamic", "filesystem_watcher"] }
bevy = {version = "0.8"}
bevy-inspector-egui = "0.12.1"
bevy_flycam = "0.8"
rand = "*"
noise = "0.7"
strum = "0.24"
strum_macros = "0.24"
rayon = "1.5"
futures-lite = "*"

