[package]
name = "logic_voxels"
version = "0.1.0"
edition = "2021"
default-run = "single"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.8", features = ["dynamic", "filesystem_watcher"] }
#bevy = {version = "0.8"}
bevy-inspector-egui = "0.12.1"
bevy_flycam = "0.8"
rand = "*"
noise = "0.7"
strum = "0.24"
strum_macros = "0.24"
rayon = "1.5"
serde = { version = "1.0", features = [ "derive" ] } 
local-ip-address = "0.4.8"
public-ip = "0.2.2"
futures-lite = "*"
tokio = { version = "1", optional = true }
bincode = "1.3.1"
bevy_renet = "0.0.5"
renet_visualizer = "0.0.2"
lz4 = "1.21.0"
bevy_rapier3d = { version = "*", features = [ "simd-stable",  "parallel", "debug-render" ] }